fixed input hitbox + centered unit labels in their buttons + aligned default background gradient to newer pastel theme

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@100;500;700&display=swap");
 
 :root {
-    --background-coldest-gradient-color: hsl(240 100% 50%);
-    --background-hottest-gradient-color: hsl(0 100% 50%);
+    --background-coldest-gradient-color: hsl(240 100% 65%);
+    --background-hottest-gradient-color: hsl(0 100% 65%);
     --container-opacities: 0;
     --container-widths: 0;
     --container-heights: 0;
@@ -261,6 +261,7 @@ input[type="text"]::placeholder {
 
 #container {
     gap: 1em;
+    pointer-events: none;
     transition: all 200ms;
 }
 
@@ -271,6 +272,10 @@ input[type="text"]::placeholder {
 }
 
 #temp-units-container button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     padding: 1rem 1.5rem;
     text-shadow: 0px 1px 3px #000000;
     cursor: pointer;
@@ -319,7 +324,7 @@ input[type="text"]::placeholder {
 
     transition: all 200ms;
 
-    background: rgba(255, 255, 255, .18);
+    background: rgba(255, 255, 255, 0.18);
     border-radius: 1rem;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     /* backdrop-filter: blur(8.2px);
